# processor

./: README.md  assem.cpp  assembler.cpp  disass.cpp  disassembler.h  oneggin.cpp  oneggin.h  proc.h
assembler/: CMakeLists.txt
assembler/includes/: assembler.h
assembler/sources/: assem.cpp
disassembler/: CMakeLists.txt
disassembler/includes/: disassembler.h
disassembler/sources/: disassem.cpp  disassembler.cpp
proc/: CMakeLists.txt
proc/sources/: proc.cpp  processor.cpp
tests/: SQUARE.txt
